# ros-feynman-camera

./: CMakeLists.txt  Dockerfile  README.md  nextvpu-usb.rules  package.xml
cfg/: resfps.cfg
include/: feynman_sdk.h  ring_queue.h
launch/: feynman.launch
msg/: cnn_info.msg  imu_frame.msg  imu_info.msg  temp_info.msg
ros/: feynman_camera_node.cpp
src/: feynman_sdk.cpp  feynman_upgrade_module.cpp  yuv_rgb.c
srv/: EnablePointCloud.srv  RemoveDark.srv  SaveDepth.srv  SetDepthMode.srv  SetExposure.srv  SwitchRectify.srv
test/: CMakeLists.txt  README.md  apitest.cpp  cppapi.cpp  cppapi.h  makefile  setup.sh  test_feynman.cpp
test/purecpp/: feynman_sdk.cpp  main.cpp  makefile  ring_queue.cpp  run.sh
test/purecpp/libusb/.deps/: core.Plo  descriptor.Plo  hotplug.Plo  io.Plo  strerror.Plo  sync.Plo
test/purecpp/libusb/.libs/: libusb-1.0.lai  libusb-1.0.so.0.3.0
test/purecpp/libusb/libusb/: Makefile  Makefile.in  core.lo  descriptor.lo  hotplug.lo  libusb-1.0.la  strerror.lo  sync.lo
test/purecpp/libusb/libusb/os/: events_posix.lo  linux_udev.lo  linux_usbfs.lo  threads_posix.lo
test/purecpp/libusb/libusb/os/.deps/: events_posix.Plo  linux_udev.Plo  linux_usbfs.Plo  threads_posix.Plo
